<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:orientation="vertical">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:weightSum="4">

        <TextView
            android:id="@+id/tv_exceptionDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="15dp"

            android:layout_weight="1"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/tv_exceptionType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/excp_type"

            android:layout_marginStart="40dp"
            android:textSize="17dp"/>


        <TextView
            android:id="@+id/tv_exceptionHours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:gravity="right"
            android:textSize="17dp"

            android:text="@string/Hours" />

        <TextView
            android:id="@+id/tv_exceptionCondition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:gravity="right"
            android:textSize="17dp"
            android:text="@string/excp_Condition" />
    </LinearLayout>
</LinearLayout>