<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".ExceptionsActivity">


    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ImageButton
        android:id="@+id/backbutton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="left"
        android:background="@null"
        android:src="@drawable/ic_left_arrow"
        android:layout_alignBottom="@+id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/homebtn" />

    <ImageButton
        android:id="@+id/homebtn"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_gravity="right"
        android:background="@null"
        android:src="@drawable/ic_home"
        android:layout_alignBottom="@+id/toolbar"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#000000"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/excp_type"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#000000"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Hours"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#000000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/excp_Condition"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#000000"/>

    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/item_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header"
        android:scrollbars="vertical" />


    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:id="@+id/FabButton"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:src="@android:drawable/ic_input_add"
        app:layout_anchorGravity="bottom|right|end"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="7dp"
        android:layout_marginBottom="44dp"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/homebtn">

</android.support.design.widget.FloatingActionButton>
</RelativeLayout>