<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp"
    android:background="@drawable/border">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/ActivityTilte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/All_exceptions"
        android:layout_marginTop="7dp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_alignTop="@+id/backbutton"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:id="@+id/backbutton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="left"
        android:background="@null"
        android:src="@drawable/ic_left_arrow"
        android:layout_alignBottom="@+id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/homebtn" />

    <ImageButton
        android:id="@+id/homebtn"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_gravity="right"
        android:background="@null"
        android:src="@drawable/ic_home"
        android:layout_alignBottom="@+id/toolbar"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/toolbar"
        android:weightSum="3">

    <LinearLayout
        android:id="@+id/SpnWithType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="3">


        <Spinner
            android:id="@+id/spnType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:textSize="20sp"
            android:textStyle="bold" />
        <!--<Spinner-->
            <!--android:id="@+id/spnType"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--style="@style/spinner_style"-->
            <!--android:popupBackground="#cccccc"/>-->

        <TextView
            android:id="@+id/tv_spinner_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/excp_type"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/SpnWithCondition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="3">

        <Spinner
            android:id="@+id/spnCondition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_spinner_condition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/excp_Condition"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/FromTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:weightSum="2">

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Timefrom"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_To"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:layout_weight="1" />


        <TextView
            android:id="@+id/ToTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/To"
            android:layout_marginTop="10dp"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/et_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:layout_weight="1" />


    </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/btn_getAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_getAll"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <!--<TextView-->
        <!--android:id="@+id/some_text_view"-->
        <!--android:textStyle="bold" />-->

</RelativeLayout>