<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".FilterVacationsActivity">


    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />
    <TextView
        android:id="@+id/ActivityTilte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_Vacations"
        android:layout_marginTop="7dp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_alignTop="@+id/backbutton"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:id="@+id/backbutton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="left"
        android:background="@null"
        android:src="@drawable/ic_left_arrow"
        android:layout_alignBottom="@+id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/homebtn" />

    <ImageButton
        android:id="@+id/homebtn"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_gravity="right"
        android:background="@null"
        android:src="@drawable/ic_home"
        android:layout_alignBottom="@+id/toolbar"
        android:layout_alignParentEnd="true" />


    <!--<android.support.v4.widget.SwipeRefreshLayout-->
        <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
        <!--android:id="@+id/swipe_container"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->

        <!--</android.support.v4.widget.SwipeRefreshLayout>-->

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#000000"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/vac_days"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#000000"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/vac_timeTo"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#000000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/vac_timeFrom"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#000000"/>

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text=""
        android:id="@+id/txt_ConnectionStatus"
        android:textColor="#000000"
        android:layout_below="@id/header"
        android:textAlignment="center"
        android:layout_margin="5dp"
        android:gravity="center" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/pb_Bar"
        android:layout_below="@+id/txt_ConnectionStatus"
        android:layout_centerHorizontal="true" />



    <android.support.v7.widget.RecyclerView
        android:id="@+id/vacation_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header"
        android:scrollbars="vertical" />


    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:id="@+id/FabButton"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:src="@android:drawable/ic_input_add"
        app:layout_anchorGravity="bottom|right|end"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="7dp"
        android:layout_marginBottom="44dp"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/homebtn">

    </android.support.design.widget.FloatingActionButton>

</RelativeLayout>